Add tmc shortcode

--- a/index.html
+++ b/index.html
@@ -201,6 +201,7 @@
 		function st(t){if("st"!=t){str="";for(var s=t.split(" ").slice(1),o=0;o<s.length;o++)str=str+"+"+s[o];window.open("https://www.startpage.com/do/metasearch.pl?query="+str.substring(1), "_self")}else window.open("https://www.startpage.com/", "_self")}
 		function t(t){if("t"!=t){str="";for(var s=t.split(" ").slice(1),o=0;o<s.length;o++)str=str+"+"+s[o];window.open("https://tineye.com/parse?url="+str.substring(1), "_self")}else window.open("https://tineye.com/", "_self")}
 		function tm(t){if("tm"!=t){str="";for(var s=t.split(" ").slice(1),o=0;o<s.length;o++)str=str+"+"+s[o];window.open("https://www.themoviedb.org/search?query="+str.substring(1), "_self")}else window.open("https://www.themoviedb.org/", "_self")}
+		function tmc(t){window.open("https://login.themilesconsultancy.com/Driver/TripSummary.aspx", "_self")}
 		function tmt(t){if("tmt"!=t){str="";for(var s=t.split(" ").slice(1),o=0;o<s.length;o++)str=str+"+"+s[o];window.open("https://www.themoviedb.org/search/tv?query="+str.substring(1), "_self")}else window.open("https://www.themoviedb.org/", "_self")}
 		function todo(t){window.open("https://todo.minskio.co.uk/", "_self")}
 		function tr(t){if("tr"!=t){str="";for(var s=t.split(" ").slice(1),o=0;o<s.length;o++)str=str+"+"+s[o];window.open("https://translate.google.com/?sl=auto&tl=en&text="+str.substring(1), "_self")}else window.open("https://translate.google.com/", "_self")}
